シュミレーター作成 done
